# mcp-agent-tasks

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  database.py  project_id.py  pyproject.toml  pytest.ini  server.py  tools.py
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md
mcp-task-server/: README.md  requirements.txt
notes/: IMPLEMENTATION_PLAN.md  poc-requirements.md
tests/: conftest.py  test_database.py  test_hierarchy_validation.py  test_rolling_work_plan.py
token_tests/: README.md  enterprise_token_test.py  realistic_token_test.py  token_comparison_test.py  ultimate_token_demo.py
