[project]
name = "mcp-agent-tasks"
version = "0.1.0"
description = "MCP server for AI agent task management without burning context tokens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
